# airflowctl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
airflowctl/: __main__.py  cli.py
airflowctl/commands/: build.py  init.py  list.py  start.py
airflowctl/modes/: uv.py  virtualenv.py
airflowctl/scripts/: add_connections.py  add_variables.py
airflowctl/utils/: connections.py  install_airflow.py  paths.py  project.py  variables.py  virtualenv.py
new_proj/: .gitignore  settings.yaml
new_proj/dags/: example_dag_basic.py
tests/: test_cli.py
tests/modes/: test_virtualenv.py
tests/scripts/: test_add_connections.py  test_add_variables.py
